--- a/echars.html
+++ b/echars.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./js/flexible.js"></script>
+    <script src="./js/echarts.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <link rel="stylesheet" href="./css/index.css">
     <style>
         @media screen and (max-width:1024px){
             html {
@@ -20,6 +23,6 @@
     </style>
 </head>
 <body>
-    
+    <div class="box"></div>
 </body>
 </html>
