--- a/echars.html
+++ b/echars.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./fonts/icomoon.css">
     <script src="./js/flexible.js"></script>
     <script src="./js/echarts.min.js"></script>
     <script src="./js/jquery.min.js"></script>
@@ -23,6 +24,45 @@
     </style>
 </head>
 <body>
-    <div class="box"></div>
+    <div class="box">
+        <div class="column">
+            <div class="panel overview">
+                <div class="inner">
+                    <ul>
+                        <li>
+                            <h4>2190</h4>
+                            <span>
+                               <i class="icon-dot"></i>
+                               设备总数
+                            </span>
+                        </li>
+                        <li>
+                            <h4>190</h4>
+                            <span>
+                               <i class="icon-dot"></i>
+                               季度新增
+                            </span>
+                        </li>
+                        <li>
+                            <h4>3001</h4>
+                            <span>
+                               <i class="icon-dot"></i>
+                               运营设备
+                            </span>
+                        </li>
+                        <li>
+                            <h4>108</h4>
+                            <span>
+                               <i class="icon-dot"></i>
+                               异常设备
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="column">2</div>
+        <div class="column">3</div>
+    </div>
 </body>
 </html>
